@@ -130,10 +130,10 @@ website       = http://webaccelerator.google.com/
 download      = http://dl.google.com/webaccelerator/
 filename      = GoogleWebAcceleratorSetup.msi
 instparam     = /passive /norestart
-upgrades      = true
+upgrades      = false
 chinstdir     =
-uninstall     =
-uninstparam   = /uninstall
+uninstall     = {F84DCD57-20AB-4E22-8892-2F88FAF76702}
+uninstparam   = /passive /norestart
 
 [WinSCP]
 
@@ -169,6 +169,21 @@ upgrades      = false
 chinstdir     = /D=#INSTALL_DIR#
 uninstall     = CDex
 uninstparam   = /S
+
+[iTunes]
+
+category      = Entertainment
+describe      = Media Player
+website       = http://www.apple.com/itunes/
+scrape        = http://www.apple.com/itunes/download/
+version       = Download iTunes ([0-9])
+download      = http://appldnld.apple.com.edgesuite.net/content.info.apple.com/iTunes#VERSION#/Win/061-2768.20060926.tnwN1/
+filename      = iTunesSetup.exe
+instparam     = /passive /norestart
+upgrades      = false
+chinstdir     =
+uninstall     = {59C4F14F-7590-45FC-BE9F-A67AB3590709}
+uninstparam   = /passive /norestart
 
 [Songbird]
 
@@ -277,6 +292,19 @@ upgrades      = true
 chinstdir     = /dir="#INSTALL_DIR#"
 uninstall     = B991B020-2968-11D8-AF23-444553540000_is1
 uninstparam   = /sp- /silent /norestart
+
+[GoogleDesktop]
+
+category      = Productivity
+describe      = Desktop Search
+website       = http://desktop.google.com/
+download      = http://desktop.google.com/en/
+filename      = GoogleDesktopSetup.exe
+instparam     =
+upgrades      = false
+chinstdir     =
+uninstall     = Google Desktop
+uninstparam   =
 
 [Notepad++]
 
